--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -12,6 +12,7 @@ $hover-color: rgba($primary-color, 0.1);
 $success-color: #00a046;
 $link-color: #0000ee;
 
+
 .breadcrumb {
   display: flex;
   max-width: 1320px;
@@ -133,159 +134,6 @@ $link-color: #0000ee;
     background-color: $background-color;
     border: 1px solid $border-color;
     //border-radius: 8px;
-  }
-
-  .product-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.06rem;
-
-    .product-item {
-      width: calc((1320px - 327px) / 3);
-      height: 520px;
-      display: flex;
-      flex-direction: column;
-      border: 1px solid #e0e0e0;
-      //border-radius: 8px;
-      cursor: pointer;
-      transition: box-shadow 0.3s ease;
-      position: relative;
-
-      &:hover {
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-
-        .product-add-to-cart-button {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      .product-image {
-        width: 100%;
-        height: 50%;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          //border-radius: 4px 4px 0 0;
-        }
-
-        .heart-icon {
-          //dışında yuvarlak bir buton oluşturmak için
-          width: 30px;
-          height: 30px;
-          background-color: rgba(234, 234, 234, 0.549);
-          border-radius: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          cursor: pointer;
-          z-index: 1;
-
-          svg {
-            width: 20px;
-            height: 20px;
-            transition: all 0.3s ease;
-          }
-
-          &.liked {
-            svg {
-              fill: $primary-color;
-              stroke: $primary-color;
-            }
-          }
-
-          &:not(.liked) {
-            svg {
-              stroke: #fff;
-              filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.5));
-            }
-          }
-
-          &:hover {
-            transform: scale(1.1);
-          }
-        }
-      }
-
-      .product-info {
-        padding: 1rem;
-        flex-grow: 1;
-
-        .name-title {
-          display: flex;
-          .brand-name {
-            font-size: 1.25rem;
-            margin: 0 4px 0 0;
-            color: $primary-color;
-            font-weight: bold;
-            text-decoration: none;
-          }
-          .product-names {
-            display: flex;
-            flex-direction: row;
-            align-items: baseline;
-
-            .product-name {
-              font-size: 1.1rem;
-              font-weight: bold;
-              margin-bottom: 0.2rem;
-              color: $text-color;
-            }
-          }
-        }
-
-        .product-title {
-          font-size: 1rem;
-          color: lighten($text-color, 20%);
-          height: 100px;
-        }
-
-        .product-price {
-          font-size: 1rem;
-          font-weight: bold;
-          color: $primary-color;
-          margin-bottom: 0.2rem;
-        }
-
-        .product-features {
-          font-size: 0.8rem;
-          color: lighten($text-color, 20%);
-        }
-      }
-
-      .product-add-to-cart-button {
-        position: absolute;
-        bottom: 6px;
-        left: 0.35rem;
-        right: 0.35rem;
-        padding: 0.45rem;
-        font-size: 0.9rem;
-        font-weight: bold;
-        color: $background-color;
-        background-color: $primary-color;
-        border: none;
-        //border-radius: 4px;
-        cursor: pointer;
-        transition: opacity 0.3s ease, transform 0.3s ease,
-          background-color 0.3s ease;
-        opacity: 0;
-        transform: translateY(10px);
-
-        &:hover:not(:disabled) {
-          background-color: darken($primary-color, 10%);
-        }
-
-        &:disabled {
-          opacity: 0.5;
-          cursor: not-allowed;
-        }
-      }
-    }
   }
 }
 
@@ -467,15 +315,17 @@ mat-paginator {
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 15px;
+  white-space: nowrap;  // Tek satırda tutmak için
 
   label {
     margin-right: 10px;
+    white-space: nowrap; // "Sorted by:" yazısını tek satırda tutmak için
   }
 
   select {
     padding: 5px;
-    //border-radius: 4px;
     border: 1px solid $border-color;
+    max-width: 200px; // Genişliği kontrol altında tutmak için
   }
 }
 
